--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Yo yo game</title>
+    <title>Bouble Trouble game</title>
     <meta charset="utf-8" />
     <style type="text/css">
       #gameScreen {
